[package]
name = "woodpecker-canicapillus"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.56"
dotenv = "0.15"
futures = "0.3.21"
major = { path = "../major" }
once_cell = "1"
regex = "1.5.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.18" }
url = "2"

[dev-dependencies]
tokio = { version = "1.18", features = ["rt", "macros"] }

[features]
default = []
fireman = []
