[package]
name = "woodpecker-major-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
major = { path = "../major" }
serde_json = "1.0.81"
js-sys = "0.3.58"
serde = "1.0.137"
