[package]
name = "major"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "1.14.0", features = ["time_0_3"] }
time = { version = "0.3.11", features = ["serde", "serde-well-known", "formatting"] }
